<resources>
    <string name="app_name">My Application</string>
    <string name="home">Home</string>
    <string name="discovery">Discovery</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_response">No Response</string>
    <string name="no_internet">No Internet</string>
    <string name="server_error">Server Error</string>
    <string name="not_authorized">Not Authorized</string>
    <string name="main_category">Main Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="process_type">Process Type</string>
    <string name="specify_here">Specify here</string>
    <string name="submit">Submit</string>
</resources>